// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component should render with avatar 1`] = `
<View
  avatar={
    Object {
      "source": "avatar_uri",
    }
  }
>
  <PadView
    Component={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "padding": 14,
        },
        undefined,
        Object {
          "backgroundColor": "peru",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`ListItem component should render with left icon 1`] = `
<View>
  <PadView
    Component={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "padding": 14,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    <Icon
      color="red"
      name="wifi"
      raised={false}
      reverse={false}
      reverseColor="white"
      size={20}
      type="font-awesome"
      underlayColor="white"
    />
  </PadView>
</View>
`;

exports[`ListItem component should render with left icon component 1`] = `
<View>
  <PadView
    Component={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "padding": 14,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      I'm left icon
    </Text>
  </PadView>
</View>
`;

exports[`ListItem component should render with right icon component 1`] = `
<View>
  <PadView
    Component={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "padding": 14,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      I'm right icon
    </Text>
  </PadView>
</View>
`;

exports[`ListItem component should render with switch 1`] = `
<View>
  <PadView
    Component={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "padding": 14,
        },
        Object {
          "paddingVertical": 8,
        },
        undefined,
        undefined,
      ]
    }
  >
    <Switch
      disabled={false}
      value={true}
    />
    <Chevron
      color="#D1D1D6"
    />
  </PadView>
  <Divider />
</View>
`;

exports[`ListItem component should render with title and subtitle 1`] = `
<View>
  <PadView
    Component={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "padding": 14,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <TextElement
        style={
          Array [
            Array [
              Object {
                "backgroundColor": "transparent",
                "fontSize": 17,
              },
              Object {
                "backgroundColor": "peru",
              },
            ],
            undefined,
          ]
        }
      >
        title test
      </TextElement>
      <TextElement
        style={
          Array [
            Array [
              Object {
                "backgroundColor": "transparent",
                "fontSize": 15,
              },
              Object {
                "backgroundColor": "peru",
              },
            ],
            undefined,
          ]
        }
      >
        title test
      </TextElement>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-end",
            "flex": 0.5,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <TextElement
        style={
          Array [
            Array [
              Object {
                "backgroundColor": "transparent",
                "fontSize": 17,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.54)",
              },
              undefined,
            ],
            undefined,
          ]
        }
      >
        title
      </TextElement>
    </View>
  </PadView>
</View>
`;

exports[`ListItem component should render without issues 1`] = `
<View>
  <PadView
    Component={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "padding": 14,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
  />
</View>
`;
